# bhcp

./: .gitattributes  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  Gemfile  LICENSE  README.md  SEMANTICS.md  THREAT_MODEL.md  VISION.md  bhcp-project.toml
.codex/: project-profile.md
.github/workflows/: ci.yml
conformance/v0/: README.md  completion-manifest.txt  frontend-completion-audit.md  graph-completion-audit.md  profile-phase-audit.md  profile-phase-audit.txt
experiments/: CONTROLLER.md  phase-2-evidence-audit.md  phase-2-evidence-audit.txt
experiments/contextual-policy-agent/: MULTISEED_PROMPT.md  README.md  TASK.md  contract.bhcp  contract.semantic-id  contract.semantic-id.pre-effect-analysis
experiments/evidence-generalization/: COMPARATIVE_BHCP_PROMPT.md  COMPARATIVE_PROSE_PROMPT.md  POSITIVE_USE_PROMPT.md  comparative-registration.md  comparative-registration.txt  positive-use-registration.md  positive-use-registration.txt  preregistration.md  preregistration.txt
experiments/in-session-evidence-agent/: FORWARD_PROMPT.md  README.md  TASK.md  bhcp-project.toml  contract.bhcp  contract.semantic-id  contract.semantic-id.pre-effect-analysis
experiments/minimal-coding-agent/: README.md  TASK.md  contract.bhcp  contract.semantic-id  contract.semantic-id.pre-effect-analysis
experiments/policy-resolution-agent/: README.md  TASK.md  (+3 more)
scripts/: validate-schemas  validate_schemas.rb
src/: adapter.rs  capability.rs  cbor.rs  consistency.rs  definition.rs  diagnostic.rs  effects.rs  experiment.rs  experiment_codex.rs  expression.rs  extensions.rs  formatting.rs  graph.rs  hash.rs  inspection.rs  kernel.rs  lib.rs  main.rs  manifest.rs  model.rs  obligation.rs  ownership.rs  parser.rs  pipeline.rs  policy.rs  prelude.rs  profile.rs  proof.rs  schema.rs  sha3.rs  state.rs  typecheck.rs  value.rs  verification.rs
tests/: adapter_evidence.rs  agent_contract.rs  capability_graph.rs  cbor.rs  ci_workflow.rs  cli.rs  coding_agent_experiment.rs  contextual_policy_experiment.rs  contextual_policy_runner.rs  controlled_ci_failure.rs  effect_authority_analysis.rs  evidence_generalization_comparative_results.rs  evidence_generalization_comparative_runner.rs  evidence_generalization_positive_runner.rs  evidence_generalization_preregistration.rs  experiment_codex.rs  experiment_controller.rs  expression_calculus.rs  extension_lowering.rs  function_predicate_elaboration.rs  goal_algebra_conformance.rs  goal_parser.rs  governance_parser.rs  graph_completion.rs  graph_model.rs  in_session_evidence_experiment.rs  in_session_evidence_runner.rs  kernel.rs  manifest.rs  obligation_graph.rs  ownership_analysis.rs  phase_two_evidence_audit.rs  pipeline.rs  policy.rs  policy_cli.rs  policy_composition.rs  policy_conformance.rs  policy_diagnostics.rs  policy_enforcement.rs  policy_evidence.rs  (+35 more)
(+288 files in other folders)
