[package]
name = "bhcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
default-run = "bhcp"
license = "Apache-2.0"
description = "Executable foundation for BHCP canonical source and v0 artifacts"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bhcp"
path = "src/main.rs"

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"

[[bin]]
name = "bhcp-verifier-fixture"
path = "tests/fixtures/verifier_process.rs"
test = false
bench = false
doc = false

[dependencies]
cddl = { version = "=0.10.6", default-features = false, features = ["additional-controls", "ast-span", "cbor", "json", "std"] }
sha3 = { version = "=0.12.0", default-features = false }

[lints.rust]
unsafe_code = "forbid"
