[package]
name = "bhcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
default-run = "bhcp"
license = "Apache-2.0"
description = "Executable foundation for BHCP canonical source and v0 artifacts"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bhcp"
path = "src/main.rs"

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"

[[bin]]
name = "bhcp-verifier-fixture"
path = "tests/fixtures/verifier_process.rs"
test = false
bench = false
doc = false

[[bin]]
name = "bhcp-adapter-sandbox"
path = "src/bin/adapter_sandbox.rs"
test = false
bench = false
doc = false

[[bin]]
name = "bhcp-experiment-fake-agent"
path = "tests/fixtures/experiment_fake_agent.rs"
test = false
bench = false
doc = false

[dependencies]
cddl = { version = "=0.10.6", default-features = false, features = ["additional-controls", "ast-span", "cbor", "json", "std"] }
sha3 = { version = "=0.12.0", default-features = false }
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }
unicode-normalization = { version = "=0.1.25", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "=0.4.4", default-features = false }
seccompiler = { version = "=0.5.0", default-features = false, features = ["json"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "=0.30.1", default-features = false, features = ["fs", "process", "signal"] }

[lints.rust]
unsafe_code = "forbid"
